# infosecB_LOOBins

./: pyproject.toml
.github/workflows/: claude.yml  validate_loobins.yml
src/pyloobins/: cli.py  util.py
tests/: test_cli.py  test_corpus.py  test_data.py  test_models.py  test_util.py
web/: astro.config.mjs
web/src/components/: Navbar.astro  SearchWidget.astro
web/src/pages/: loobins.json.ts
web/src/pages/binaries/: index.astro
