[project]
name = "PyLOOBins"
version = "2.0.14"
description = "Python package for managing the LOOBins model and schema."
authors = [
    { name = "infosecB", email = "brendan@infosecb.com" },
    { name = "0xv1n", email = "0xv1n@protonmail.com" },
]
readme = "docs/pyloobins/README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
keywords = ["cybersecurity", "cli", "lol"]
dependencies = [
    "pydantic>=2,<3",
    "pyyaml>=6.0,<7",
    "click>=8.1.3,<9",
    "jinja2>=3.1.2,<4",
    "stix2>=3.0.1,<4",
]

[project.urls]
Homepage = "https://loobins.io/"
Repository = "https://github.com/infosecB/LOOBins"

[project.scripts]
pyloobins = "pyloobins.cli:cli"

[dependency-groups]
dev = [
    "pylint>=2.17.0",
    "black>=23.1.0",
    "pre-commit>=3.2.2",
    "pytest>=7.3.1",
    "tox>=4.5.1",
    "isort>=5.12.0",
    "polyfactory>=2.18.0,<3",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyloobins"]

# The LOOBin YAML corpus lives at the repo root (outside the package) so the
# website and CI can read it in place. Bundle a copy into the wheel under the
# package so an installed pyloobins can discover the data without relying on a
# walk up the filesystem.
[tool.hatch.build.targets.wheel.force-include]
"LOOBins" = "pyloobins/LOOBins"

[tool.hatch.build.targets.sdist]
include = ["src/pyloobins", "LOOBins/*.yml"]

[tool.pylint.'MESSAGES CONTROL']
disable = ['no-name-in-module', 'too-few-public-methods']

[tool.mypy]
files = ["src/pyloobins"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.tox]
legacy_tox_ini = """
  [tox]
  env_list =
      py38,py39,py310,py311,py312
  minversion = 4.5.1

  [testenv]
  description = run the tests with pytest
  package = wheel
  wheel_build_env = .pkg
  deps =
      pytest>=6
      polyfactory>=2.18.0,<3
  commands =
      pytest {tty:--color=yes} {posargs}
"""
